--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
   "main": "index.js",
   "repository": "git@github.com:ThiagoFazzi/docker-nodejs.git",
   "author": "Thiago Fazzi <lopesfazzithiago@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js",
+    "dev": ""
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
