--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "author": "Thiago Fazzi <lopesfazzithiago@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": ""
+    "start": "nodemon --exec babel-node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "nodemon": "^2.0.2"
   }
 }
