--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Thiago Fazzi <lopesfazzithiago@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "dev": "nodemon --exec babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
