--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,29 @@ services:
       - ${PORT}:${PORT}
     command: yarn dev
 
+  test:
+    image: node:alpine
+    volumes:
+      - ./:/app
+    working_dir: /app
+    depends_on: 
+      - mongoDB-test
+    environment: 
+      NODE_ENV: test
+    ports:
+      - ${TEST_PORT}:${TEST_PORT}
+    command: yarn test
+
   mongoDB:
     image: mongo
     expose:
-      - ${DB_PORT} 
+      - ${DB_PORT}
     volumes:
       - ./data/db:/data/db
+
+  mongoDB-test:
+    image: mongo
+    expose:
+      - ${TEST_DB_PORT}
+    volumes:
+      - ./data-test/db:/data/db
