--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,23 +10,10 @@ services:
     depends_on: 
       - mongoDB
     environment: 
-      NODE_ENV: development
+      NODE_ENV: Development
     ports:
       - ${PORT}:${PORT}
     command: yarn dev
-
-  test:
-    image: node:alpine
-    volumes:
-      - ./:/app
-    working_dir: /app
-    depends_on: 
-      - mongoDB-test
-    environment: 
-      NODE_ENV: test
-    ports:
-      - ${TEST_PORT}:${TEST_PORT}
-    command: yarn test
 
   mongoDB:
     image: mongo
@@ -34,10 +21,3 @@ services:
       - ${DB_PORT}
     volumes:
       - ./data/db:/data/db
-
-  mongoDB-test:
-    image: mongo
-    expose:
-      - ${TEST_DB_PORT}
-    volumes:
-      - ./data-test/db:/data/db
